src/index.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Space+Grotesk:wght@300..700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;

h1,
h2 {
  @apply font-spaceGrotesk;
}

* {
  scroll-behavior: smooth;
  scroll-padding-top: 180px;
}

::-webkit-scrollbar {
  @apply bg-[#f9741644] w-2 dark:bg-[#2a3142de];
}

::-webkit-scrollbar-thumb {
  @apply bg-[#f9741663] rounded-full hover:bg-[#f97416ce] dark:bg-[#0ea4e935] dark:hover:bg-[#0ea4e9d2]  delay-100;
}

.main-bg {
  @apply bg-[url('./assets/bg-image.png')] bg-center bg-contain bg-repeat-y dark:bg-[url('./assets/bg-dark-image.png')];
}

@media screen and (max-width: 1020px) {
  .main-bg {
    @apply bg-cover;
  }
}

.social-media {
  @apply shadow-md border-2 border-orange-500 dark:border-sky-500 rounded-lg p-4 dark:hover:bg-sky-600 hover:bg-orange-600 duration-200 ease-in-out;
}

.social-media svg {
  @apply text-orange-600 dark:text-sky-500 text-[1.3rem];
}

.section {
  @apply mx-auto w-[94%] md:w-[90%] lg:w-[75%] max-w-[1024px];
}

